# algorithmic-arena

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.sh
docs/: 10_finishing_up_the_artefact.md  11_maps_for_performance_analysis.md  12_marking_scheme.md  1_Initial_Plan.md  2_Project_Context.md  3_Initial_Development_Context.md  4_Game_Concept.md  5_Summary.md  6_1902_Process.md  7_Implementation_Plan_0302  7_Implementation_Plan_0302.md  8_Game_Concept_Revised.md  9_Game_concept_integration.md  Algorithm_Performance_Marking_Scheme.md  Analyzation_guide.md  Benchmark_Mode.md  Identified_issues_and_Solutions.md  Performance Analyze.md
docs/Pair_analyzing/: collision_quadtree_vs_brute.md  command_list.md  pathfinding_astar_vs_dijkstra.md
docs/analyzing_each_pair/: README.md  collision_quadtree_vs_brute.md  command_list.md  pathfinding_astar_vs_dijkstra.md
maps/: benchmark_maze_128.map  benchmark_maze_512.map  benchmark_open_128.map  benchmark_open_512.map  nexus_siege_128.map  nexus_siege_512.map
scripts/: analyze_all.sh  analyze_benchmark_csv.py  generate_maps.py  run_collision_matrix.sh  run_pathfinding_matrix.sh
src/: Game.cpp  Game.h  game  main.cpp
src/Algorithms/Collision/: BruteForceCollisionSystem.cpp  BruteForceCollisionSystem.h  ICollisionSystem.h  QuadtreeCollisionSystem.cpp  QuadtreeCollisionSystem.h
src/Algorithms/Pathfinding/: AStarPathfindingSystem.h  (+5 more)
src/Entities/: Entity.h  EntityManager.h  Minion.cpp  Minion.h  PlayerCommander.cpp  PlayerCommander.h
src/Util/: CsvLogger.h  Logger.h  PathfindBudget.h  PathfindingPerf.cpp  PathfindingPerf.h
src/World/: MapLoader.cpp  MapLoader.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h
